1998-06-25  Maciej Stachowiak  <maciej@roc-ny1-21.ix.netcom.com>

	* setup.c (setup_game): FIXME: enums do _not_ result in the
	members of the enumeration being #defined, at least on gcc, so the
	`#ifdef GTK_UPDATE_SNAP_TO_TICKS' test is bogus.  Leaving only the
	case that works on gtk+-1.0.4; is it worth supporting earlier
	gtk's than that?


Wed Jun 24 22:25:48 1998  Scott D. Heavner  <sdh@fishmonger.dont.mail.me.here.net>

	* Commit to CVS.

	* cyahtzee.c: Add color support.  gets->fgets.  Try to maintain
	backward compatibilty with very old curses if NOCOLORCURSES defined.

	* setup.c (setup_game): GTK_UPDATE_SNAP_TO_TICKS has dissapeared
	in CVS - noticed & patch by Jaka Mocnik.  Should probably just
	toss the old way, but leave for now in case anyone is using an old
	snapshot.
	

Sun Jun 21 15:06:24 1998  Scott D. Heavner  <sdh@fishmonger.dont.mail.me.here.net>

	* gyahtzee.c (ShowPlayer): Add bonus to upper total - that's where
	zorst had it, but should it just go directly into grand total?

	* Release version 980621a 
        (980621 had probs w/Build script and missing config.h)

	* add Build script - cleaner than makefile to determine gnome
	setup on an unknown machine?

	* computer.c:
	  * remove be_computer()
	  * Forgot to call RollSelectedDice() for each computer roll
	  * Remove refs to global CurrentPlayer, each function should use
	    value passed as parameter player

	* gyahtzee.c / pix dir: update names inside xpm files to reflect
	new names (gnome-dice-N.xpm), fix check for missing pixmap files -
	will now use any pixmap files it finds, but fallback to compiled
	in pixmaps.

	* cyahtzee.c, cyahtzee.h: Add basic curses support - using zorst's
 	original version.  Will go back and add color hacks later.

	* scores.c, scores.h: Curses version has own routines for dealing
	with highscores.

Thu Jun 18 12:53:32 1998  Scott D. Heavner  <sdh@fishmonger.dont.mail.me.here.net>

	* gyahtzee.c (GyahtzeeCreateMainWindow): Put eventbox around